# tmuxify

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
src/: main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/model/: config.rs  mod.rs  pane.rs  window.rs
src/ops/: doctor.rs  interactive.rs  mod.rs  validate.rs  write.rs
