[package]
name = "tmuxify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
dialoguer = { version = "0.12.0", features = ["editor"] }
dirs = "6.0.0"
indicatif = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
which = "8.0.0"
